emg_layout/src/old/snapshots/emg_layout__old__animation__tests__interrupt.snap
---
source: emg_layout/src/old/animation.rs
assertion_line: 1013
expression: "&a"

---
AnimationEdge {
    inside: AnimationInsideOG {
        steps: StateVar(
            [],
        ),
        interruption: StateVar(
            [
                (
                    0ns,
                    [
                        To(
                            [
                                Prop(
                                    TypeName(
                                        "opacity",
                                    ),
                                    Motion {
                                        position: NotNan(
                                            0.0,
                                        ),
                                        velocity: NotNan(
                                            0.0,
                                        ),
                                        target: NotNan(
                                            0.0,
                                        ),
                                        interpolation: Spring {
                                            stiffness: NotNan(
                                                170.0,
                                            ),
                                            damping: NotNan(
                                                26.0,
                                            ),
                                        },
                                        unit: Empty,
                                        interpolation_override: None,
                                    },
                                ),
                            ],
                        ),
                        To(
                            [
                                Prop(
                                    TypeName(
                                        "opacity",
                                    ),
                                    Motion {
                                        position: NotNan(
                                            1.0,
                                        ),
                                        velocity: NotNan(
                                            0.0,
                                        ),
                                        target: NotNan(
                                            1.0,
                                        ),
                                        interpolation: Spring {
                                            stiffness: NotNan(
                                                170.0,
                                            ),
                                            damping: NotNan(
                                                26.0,
                                            ),
                                        },
                                        unit: Empty,
                                        interpolation_override: None,
                                    },
                                ),
                            ],
                        ),
                    ],
                ),
            ],
        ),
        props: [
            StateVarPropertyOG(
                StateVar(
                    Prop(
                        TypeName(
                            "opacity",
                        ),
                        Motion {
                            position: NotNan(
                                1.0,
                            ),
                            velocity: NotNan(
                                0.0,
                            ),
                            target: NotNan(
                                1.0,
                            ),
                            interpolation: Spring {
                                stiffness: NotNan(
                                    170.0,
                                ),
                                damping: NotNan(
                                    26.0,
                                ),
                            },
                            unit: Empty,
                            interpolation_override: None,
                        },
                    ),
                ),
            ),
        ],
    },
    timing: StateAnchor(
        Timing {
            current: 0ns,
            dt: 0ns,
        },
    ),
    running: StateAnchor(
        true,
    ),
}
